--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                 We are to answer any question you may have.
             </p>
             <h1 class="animate__animated animate__backInLeft  animate__delay-0.2s">
-                Get In Tourch
+                Get In Touch
             </h1>
             
         </div>
